# BioStructureExplorer-DSA-CS221

./: CMakeLists.txt  README.md  Web_Server_Readme.txt  main.cpp  realistic_gene_protein_interaction_network.ipynb  start_explorer.bat
data/: sample_dna.fasta  sample_interactions.csv
data/dna/: sample_dna.fasta  tutorial_sequence - Copy.fasta  tutorial_sequence.fasta
data/graph/: gene_protein_interactions.csv  tutorial_network.csv
engine/dna/: dna_search.cpp  dna_search.h
engine/evolution/: mutation_simulator.cpp  mutation_simulator.h
engine/graph/: graph_analyzer.cpp  graph_analyzer.h
engine/protein/: protein_parser.cpp  protein_parser.h
engine/utils/: json_exporter.h
output/: dna_search_results.json  graph_analysis_results.json  mutation_simulation_results.json  protein_structure.json
visualization/: dna-search.html  graph-analyzer.html  index.html  mutation-simulator.html  protein-parser.html
visualization/css/: module-common.css  styles.css
visualization/js/: dna-visualization.js  evolution-visualization.js  graph-visualization.js  main.js  module-common.js  protein-visualization.js  three-utils.js
